--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="public/invitation-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>yearend-invitation</title>
+    <meta property="og:url" content="https://yearend-invitation.vercel.app/" />
+    <meta property="og:title" content="endyear-invitation" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://i.pinimg.com/564x/bd/27/40/bd2740f18f9021c51d1090ba4682f2ab.jpg"
+    />
+    <meta
+      property="og:description"
+      content="나만의 느낌으로 꾸미는 올해 연말 파티 초대장"
+    />
   </head>
   <body>
     <div id="app"></div>
